--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
    <title>Sudoku Journey</title>
    <style>
       :root {
-         /* Light Mode Colors */
          --bg: #ffffff;
          --text: #333;
          --primary: #7e57c2;
@@ -19,7 +18,6 @@
       }
 
       body.dark {
-         /* Dark Mode Colors */
          --bg: #1c1b29;
          --text: #f0e9ff;
          --primary: #9575cd;
@@ -34,22 +32,24 @@
          display: flex;
          flex-direction: column;
          align-items: center;
-         justify-content: center;
+         justify-content: flex-start;
          min-height: 100vh;
          background: var(--bg);
          font-family: 'Segoe UI', sans-serif;
          margin: 0;
+         padding: 20px;
          color: var(--text);
          transition: background 0.3s, color 0.3s;
       }
 
       h1 {
-         margin-bottom: 20px;
+         margin-bottom: 15px;
          color: var(--primary);
       }
 
       .controls {
          margin-bottom: 15px;
+         text-align: center;
       }
 
       select,
@@ -88,13 +88,18 @@
          border: none;
       }
 
+      /* ✅ Responsive Sudoku board */
       .sudoku {
          display: grid;
-         grid-template-columns: repeat(9, 50px);
-         grid-template-rows: repeat(9, 50px);
+         grid-template-columns: repeat(9, 1fr);
+         grid-template-rows: repeat(9, 1fr);
+         width: 90vmin;
+         /* square responsive board */
+         height: 90vmin;
+         max-width: 500px;
+         max-height: 500px;
          border: 3px solid black;
-         margin-bottom: 20px;
-         transition: border 0.3s;
+         margin: 0 auto 20px auto;
       }
 
       .cell {
@@ -102,9 +107,9 @@
          justify-content: center;
          align-items: center;
          border: 1px solid #666;
-         /* 👈 ensures all cells have visible borders */
          background: var(--cell-bg);
-         font-size: 20px;
+         font-size: calc(2.2vmin + 6px);
+         /* responsive font size */
          font-weight: bold;
       }
 
@@ -114,7 +119,7 @@
          text-align: center;
          border: none;
          background: transparent;
-         font-size: 20px;
+         font-size: inherit;
          font-weight: bold;
          color: var(--primary-dark);
          outline: none;
@@ -125,7 +130,7 @@
          color: white;
       }
 
-      /* Thicker 3×3 block lines */
+      /* ✅ Thicker 3×3 block lines */
       .cell:nth-child(3n) {
          border-right: 3px solid black;
       }
@@ -178,6 +183,11 @@
          color: var(--primary-dark);
          margin-bottom: 20px;
       }
+
+      #errorCount {
+         margin-top: 10px;
+         font-weight: bold;
+      }
    </style>
 </head>
 
@@ -200,10 +210,10 @@
       </select>
    </div>
 
+   <!-- ✅ Sudoku board always visible -->
    <div class="sudoku" id="sudoku-board"></div>
    <p id="errorCount">Errors: 0 / 3</p>
 
-   <!-- Celebration screen -->
    <div id="celebration">
       <h2>🎉 Congrats! You Won 🎉</h2>
       <button onclick="nextGame()">Play Another Game</button>
@@ -251,7 +261,6 @@
       function loadPuzzle(difficulty, puzzleIndex = 0) {
          let puzzle = puzzles[difficulty][puzzleIndex];
          solutionBoard = solutions[difficulty][puzzleIndex].split("");
-
          let cells = boardElement.querySelectorAll(".cell input");
 
          puzzle.split("").forEach((num, i) => {
@@ -352,14 +361,12 @@
       function toggleDarkMode() {
          document.body.classList.toggle("dark");
          let btn = document.getElementById("toggleMode");
-         if (document.body.classList.contains("dark")) {
-            btn.innerText = "☀️ Light";
-         } else {
-            btn.innerText = "🌙 Dark";
-         }
+         btn.innerText = document.body.classList.contains("dark") ? "☀️ Light" : "🌙 Dark";
       }
-   </script>
 
+      // ✅ Initialize with an empty grid so it's never blank
+      createEmptyBoard();
+   </script>
 </body>
 
 </html>
